tests/integration_tests/caldav/snapshots/run_integration_tests__integration_tests__caldav__calendar_report__1_report_body.snap
---
source: tests/integration_tests/caldav/calendar_report.rs
expression: body
---
<?xml version="1.0" encoding="utf-8"?>
<multistatus xmlns="DAV:" xmlns:CAL="urn:ietf:params:xml:ns:caldav" xmlns:CARD="urn:ietf:params:xml:ns:carddav" xmlns:CS="http://calendarserver.org/ns/" xmlns:PUSH="https://bitfire.at/webdav-push">
    <response>
        <href>/caldav/principal/user/calendar/abcd2.ics</href>
        <propstat>
            <prop>
                <CAL:calendar-data>BEGIN:VCALENDAR&#13;
VERSION:2.0&#13;
PRODID:-//Example Corp.//CalDAV Client//EN&#13;
BEGIN:VTIMEZONE&#13;
LAST-MODIFIED:20040110T032845Z&#13;
TZID:US/Eastern&#13;
BEGIN:DAYLIGHT&#13;
DTSTART:20000404T020000&#13;
RRULE:FREQ=YEARLY;BYDAY=1SU;BYMONTH=4&#13;
TZNAME:EDT&#13;
TZOFFSETFROM:-0500&#13;
TZOFFSETTO:-0400&#13;
END:DAYLIGHT&#13;
BEGIN:STANDARD&#13;
DTSTART:20001026T020000&#13;
RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=10&#13;
TZNAME:EST&#13;
TZOFFSETFROM:-0400&#13;
TZOFFSETTO:-0500&#13;
END:STANDARD&#13;
END:VTIMEZONE&#13;
BEGIN:VEVENT&#13;
DTSTAMP:20060206T001121Z&#13;
DTSTART;TZID=US/Eastern:20060102T120000&#13;
DURATION:PT1H&#13;
RRULE:FREQ=DAILY;COUNT=5&#13;
SUMMARY:Event #2&#13;
UID:abcd2&#13;
END:VEVENT&#13;
BEGIN:VEVENT&#13;
DTSTAMP:20060206T001121Z&#13;
DTSTART;TZID=US/Eastern:20060104T140000&#13;
DURATION:PT1H&#13;
RECURRENCE-ID;TZID=US/Eastern:20060104T120000&#13;
SUMMARY:Event #2 bis&#13;
UID:abcd2&#13;
END:VEVENT&#13;
END:VCALENDAR&#13;
</CAL:calendar-data>
            </prop>
            <status>HTTP/1.1 200 OK</status>
        </propstat>
    </response>
    <response>
        <href>/caldav/principal/user/calendar/abcd3.ics</href>
        <propstat>
            <prop>
                <CAL:calendar-data>BEGIN:VCALENDAR&#13;
VERSION:2.0&#13;
PRODID:-//Example Corp.//CalDAV Client//EN&#13;
BEGIN:VTIMEZONE&#13;
LAST-MODIFIED:20040110T032845Z&#13;
TZID:US/Eastern&#13;
BEGIN:DAYLIGHT&#13;
DTSTART:20000404T020000&#13;
RRULE:FREQ=YEARLY;BYDAY=1SU;BYMONTH=4&#13;
TZNAME:EDT&#13;
TZOFFSETFROM:-0500&#13;
TZOFFSETTO:-0400&#13;
END:DAYLIGHT&#13;
BEGIN:STANDARD&#13;
DTSTART:20001026T020000&#13;
RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=10&#13;
TZNAME:EST&#13;
TZOFFSETFROM:-0400&#13;
TZOFFSETTO:-0500&#13;
END:STANDARD&#13;
END:VTIMEZONE&#13;
BEGIN:VEVENT&#13;
ATTENDEE;PARTSTAT=ACCEPTED;ROLE=CHAIR:mailto:cyrus@example.com&#13;
ATTENDEE;PARTSTAT=NEEDS-ACTION:mailto:lisa@example.com&#13;
DTSTAMP:20060206T001220Z&#13;
DTSTART;TZID=US/Eastern:20060104T100000&#13;
DURATION:PT1H&#13;
LAST-MODIFIED:20060206T001330Z&#13;
ORGANIZER:mailto:cyrus@example.com&#13;
SEQUENCE:1&#13;
STATUS:TENTATIVE&#13;
SUMMARY:Event #3&#13;
UID:abcd3&#13;
X-ABC-GUID:E1CX5Dr-0007ym-Hz@example.com&#13;
END:VEVENT&#13;
END:VCALENDAR&#13;
</CAL:calendar-data>
            </prop>
            <status>HTTP/1.1 200 OK</status>
        </propstat>
    </response>
</multistatus>
